Add "Available on the iPhone" button

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 			<div class="col-lg-6 col-lg-offset-3">
 				<h1>For tipsters.<br/>By tipsters.</h1>
 				<h3>We created this app with the goal of helping you understand if you should place a bet or not, and thus to make sports betting even easier. Give us a shout about what you think of our app!</h3>
-			</div>
+			  <p><a href="https://itunes.apple.com/us/app/betting-odds-calculator/id904411778?ls=1&mt=8"><img class="img" src="assets/img/download-appstore.png" width="220" alt=""></a></p>
+      </div>
 		</div><!-- /row -->
 		<div class="row mt centered">
         <div class="col-lg-4">
