Add social sharing buttons

--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
             <br/>
             <a href="https://itunes.apple.com/us/app/betting-odds-calculator/id904411778?ls=1&mt=8" class="app-button app-button-1">GET THE APP</a>
             <a href="#app-info" class="app-button app-button-2">LEARN MORE</a>
+            <p>
+              <h4>Share this app!</h4>
+                <a href="https://twitter.com/home?status=Betting%20odds%20calculator%20translates%20your%20football%20knowledge%20into%20odds%20via%20@bettingexpert%20http://oddscalculator.co" target="_blank">
+                  <span class="fa-stack fa-lg" style="color:#55acee;">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://oddscalculator.co" target="_blank">
+                  <span class="fa-stack fa-lg" style="color:#3b5998;">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+            </p>
 				</div><!-- /col-lg-6 -->
 				<div class="col-lg-6">
 					<img class="img-responsive" src="assets/img/iphone5-app.png" alt="">
